first draft joint datset

--- a/load_abstarcts.ipynb
+++ b/load_abstarcts.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 12,
       "metadata": {
         "scrolled": true
       },
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -65,19 +65,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Find columns that are mostly empty, drop them\n",
         "nan_count = abstracts_df.isna().sum()/len(abstracts_df)\n",
         "# Drop those and the columns with repeptitve information\n",
-        "abstracts_df.drop(columns = list(nan_count[nan_count>0.5].index) + ['Publication Type (J=Journal; B=Book; S=Series;...','Language','Document Type', 'Date this report was generated.', 'PubMed ID', '29-Character Source Abbreviation', 'Document Delivery Number', 'Accession Number'], inplace=True)"
+        "abstracts_df.drop(columns = list(nan_count[nan_count>0.5].index) + ['Publication Type (J=Journal; B=Book; S=Series;...',\n",
+        "                                                                    'Language','Document Type',\n",
+        "                                                                     'Date this report was generated.',\n",
+        "                                                                      'PubMed ID',\n",
+        "                                                                      '29-Character Source Abbreviation',\n",
+        "                                                                      'Document Delivery Number',\n",
+        "                                                                      'Accession Number'\n",
+        "                                                                      ,'Total Times Cited Count (Web of Science Core C...'], inplace=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -90,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -102,7 +109,6 @@
               "       'ORCID Identifier (Open Researcher and Contribu...',\n",
               "       'Funding Agency and Grant Number', 'Cited Reference Count',\n",
               "       'Web of Science Core Collection Times Cited Count',\n",
-              "       'Total Times Cited Count (Web of Science Core C...',\n",
               "       'Usage Count (Last 180 Days)', 'Usage Count (Since 2013)', 'Publisher',\n",
               "       'Publisher City', 'Publisher Address',\n",
               "       'International Standard Serial Number (ISSN)',\n",
@@ -114,7 +120,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 113,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -125,7 +131,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "abstracts_df = abstracts_df.rename(columns={'International Standard Serial Number (ISSN)':'ISSN',\n",
+        "                                            'Electronic International Standard Serial Numbe...':'eISSN',\n",
+        "                                             'ORCID Identifier (Open Researcher and Contribu...':'ORCIDs'})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -134,13 +151,22 @@
               "6335"
             ]
           },
-          "execution_count": 114,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "len(abstracts_df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "abstracts_df.to_csv('abstracts_df.csv', '\\t')"
       ]
     }
   ],
