--- a/load_impacts.ipynb
+++ b/load_impacts.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -28,9 +28,9 @@
         "dfs = []\n",
         "for year in range(2000, 2023):\n",
         "    year_JIF = pd.read_csv(f\"./raw_data/JIF{year}.csv\", header = 1, sep=\",\", index_col=False)\n",
-        "    year_JIF['year'] = year\n",
-        "    year_JIF.columns = ['Journal name', 'JCR Abbreviation', 'ISSN', 'eISSN', 'Category',\n",
-        "       'JIF', 'Eigenfactor', 'year']\n",
+        "    year_JIF['Year Published'] = year\n",
+        "    year_JIF.columns = ['Journal name', 'JCR Abbreviation', 'International Standard Serial Number (ISSN)', 'eISSN', 'Category',\n",
+        "       'JIF', 'Eigenfactor', 'Year Published']\n",
         "    dfs.append(year_JIF)\n",
         "\n",
         "IFs_df = pd.concat(dfs, axis = 0)"
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -63,19 +63,23 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>Journal name</th>\n",
+              "      <th>JCR Abbreviation</th>\n",
               "      <th>ISSN</th>\n",
               "      <th>eISSN</th>\n",
+              "      <th>Category</th>\n",
               "      <th>JIF</th>\n",
               "      <th>Eigenfactor</th>\n",
-              "      <th>year</th>\n",
+              "      <th>Year Published</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>ANNUAL REVIEW OF BIOCHEMISTRY</td>\n",
+              "      <td>ANNU REV BIOCHEM</td>\n",
               "      <td>0066-4154</td>\n",
               "      <td>1545-4509</td>\n",
+              "      <td>BIOCHEMISTRY &amp; MOLECULAR BIOLOGY - SCIE</td>\n",
               "      <td>43.429</td>\n",
               "      <td>NaN</td>\n",
               "      <td>2000</td>\n",
@@ -83,8 +87,10 @@
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>CELL</td>\n",
+              "      <td>CELL</td>\n",
               "      <td>0092-8674</td>\n",
               "      <td>1097-4172</td>\n",
+              "      <td>BIOCHEMISTRY &amp; MOLECULAR BIOLOGY - SCIE</td>\n",
               "      <td>32.440</td>\n",
               "      <td>NaN</td>\n",
               "      <td>2000</td>\n",
@@ -92,8 +98,10 @@
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>NATURE MEDICINE</td>\n",
+              "      <td>NAT MED</td>\n",
               "      <td>1078-8956</td>\n",
               "      <td>1546-170X</td>\n",
+              "      <td>BIOCHEMISTRY &amp; MOLECULAR BIOLOGY - SCIE</td>\n",
               "      <td>27.905</td>\n",
               "      <td>NaN</td>\n",
               "      <td>2000</td>\n",
@@ -101,8 +109,10 @@
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>ANNUAL REVIEW OF CELL AND DEVELOPMENTAL BIOLOGY</td>\n",
+              "      <td>ANNU REV CELL DEV BI</td>\n",
               "      <td>1081-0706</td>\n",
               "      <td>1530-8995</td>\n",
+              "      <td>BIOCHEMISTRY &amp; MOLECULAR BIOLOGY - SCIE</td>\n",
               "      <td>26.300</td>\n",
               "      <td>NaN</td>\n",
               "      <td>2000</td>\n",
@@ -110,8 +120,10 @@
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>CA-A CANCER JOURNAL FOR CLINICIANS</td>\n",
+              "      <td>CA-CANCER J CLIN</td>\n",
               "      <td>0007-9235</td>\n",
               "      <td>1542-4863</td>\n",
+              "      <td>ONCOLOGY - SCIE</td>\n",
               "      <td>24.674</td>\n",
               "      <td>NaN</td>\n",
               "      <td>2000</td>\n",
@@ -124,12 +136,16 @@
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>659</th>\n",
               "      <td>Cancer Drug Resistance</td>\n",
+              "      <td>CANCER DRUG RESIST</td>\n",
               "      <td>NaN</td>\n",
               "      <td>2578-532X</td>\n",
+              "      <td>ONCOLOGY - ESCI</td>\n",
               "      <td>3.700</td>\n",
               "      <td>0.001</td>\n",
               "      <td>2022</td>\n",
@@ -137,8 +153,10 @@
               "    <tr>\n",
               "      <th>660</th>\n",
               "      <td>ChemPhotoChem</td>\n",
+              "      <td>CHEMPHOTOCHEM</td>\n",
               "      <td>2367-0932</td>\n",
               "      <td>2367-0932</td>\n",
+              "      <td>CHEMISTRY, PHYSICAL - SCIE</td>\n",
               "      <td>3.700</td>\n",
               "      <td>0.004</td>\n",
               "      <td>2022</td>\n",
@@ -146,8 +164,10 @@
               "    <tr>\n",
               "      <th>661</th>\n",
               "      <td>Molecular Informatics</td>\n",
+              "      <td>MOL INFORM</td>\n",
               "      <td>1868-1743</td>\n",
               "      <td>1868-1751</td>\n",
+              "      <td>CHEMISTRY, MEDICINAL - SCIE</td>\n",
               "      <td>3.600</td>\n",
               "      <td>0.002</td>\n",
               "      <td>2022</td>\n",
@@ -155,6 +175,8 @@
               "    <tr>\n",
               "      <th>662</th>\n",
               "      <td>Copyright (c) 2024 Clarivate</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
@@ -168,44 +190,59 @@
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>2022</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>15596 rows × 6 columns</p>\n",
+              "<p>15596 rows × 8 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                          Journal name       ISSN      eISSN  \\\n",
-              "0                        ANNUAL REVIEW OF BIOCHEMISTRY  0066-4154  1545-4509   \n",
-              "1                                                 CELL  0092-8674  1097-4172   \n",
-              "2                                      NATURE MEDICINE  1078-8956  1546-170X   \n",
-              "3      ANNUAL REVIEW OF CELL AND DEVELOPMENTAL BIOLOGY  1081-0706  1530-8995   \n",
-              "4                   CA-A CANCER JOURNAL FOR CLINICIANS  0007-9235  1542-4863   \n",
-              "..                                                 ...        ...        ...   \n",
-              "659                             Cancer Drug Resistance        NaN  2578-532X   \n",
-              "660                                      ChemPhotoChem  2367-0932  2367-0932   \n",
-              "661                              Molecular Informatics  1868-1743  1868-1751   \n",
-              "662                      Copyright (c) 2024 Clarivate         NaN        NaN   \n",
-              "663  By exporting the selected data; you agree to t...        NaN        NaN   \n",
+              "                                          Journal name      JCR Abbreviation  \\\n",
+              "0                        ANNUAL REVIEW OF BIOCHEMISTRY      ANNU REV BIOCHEM   \n",
+              "1                                                 CELL                  CELL   \n",
+              "2                                      NATURE MEDICINE               NAT MED   \n",
+              "3      ANNUAL REVIEW OF CELL AND DEVELOPMENTAL BIOLOGY  ANNU REV CELL DEV BI   \n",
+              "4                   CA-A CANCER JOURNAL FOR CLINICIANS      CA-CANCER J CLIN   \n",
+              "..                                                 ...                   ...   \n",
+              "659                             Cancer Drug Resistance    CANCER DRUG RESIST   \n",
+              "660                                      ChemPhotoChem         CHEMPHOTOCHEM   \n",
+              "661                              Molecular Informatics            MOL INFORM   \n",
+              "662                      Copyright (c) 2024 Clarivate                    NaN   \n",
+              "663  By exporting the selected data; you agree to t...                   NaN   \n",
               "\n",
-              "        JIF  Eigenfactor  year  \n",
-              "0    43.429          NaN  2000  \n",
-              "1    32.440          NaN  2000  \n",
-              "2    27.905          NaN  2000  \n",
-              "3    26.300          NaN  2000  \n",
-              "4    24.674          NaN  2000  \n",
-              "..      ...          ...   ...  \n",
-              "659   3.700        0.001  2022  \n",
-              "660   3.700        0.004  2022  \n",
-              "661   3.600        0.002  2022  \n",
-              "662     NaN          NaN  2022  \n",
-              "663     NaN          NaN  2022  \n",
+              "          ISSN      eISSN                                 Category     JIF  \\\n",
+              "0    0066-4154  1545-4509  BIOCHEMISTRY & MOLECULAR BIOLOGY - SCIE  43.429   \n",
+              "1    0092-8674  1097-4172  BIOCHEMISTRY & MOLECULAR BIOLOGY - SCIE  32.440   \n",
+              "2    1078-8956  1546-170X  BIOCHEMISTRY & MOLECULAR BIOLOGY - SCIE  27.905   \n",
+              "3    1081-0706  1530-8995  BIOCHEMISTRY & MOLECULAR BIOLOGY - SCIE  26.300   \n",
+              "4    0007-9235  1542-4863                          ONCOLOGY - SCIE  24.674   \n",
+              "..         ...        ...                                      ...     ...   \n",
+              "659        NaN  2578-532X                          ONCOLOGY - ESCI   3.700   \n",
+              "660  2367-0932  2367-0932               CHEMISTRY, PHYSICAL - SCIE   3.700   \n",
+              "661  1868-1743  1868-1751              CHEMISTRY, MEDICINAL - SCIE   3.600   \n",
+              "662        NaN        NaN                                      NaN     NaN   \n",
+              "663        NaN        NaN                                      NaN     NaN   \n",
               "\n",
-              "[15596 rows x 6 columns]"
+              "     Eigenfactor  Year Published  \n",
+              "0            NaN            2000  \n",
+              "1            NaN            2000  \n",
+              "2            NaN            2000  \n",
+              "3            NaN            2000  \n",
+              "4            NaN            2000  \n",
+              "..           ...             ...  \n",
+              "659        0.001            2022  \n",
+              "660        0.004            2022  \n",
+              "661        0.002            2022  \n",
+              "662          NaN            2022  \n",
+              "663          NaN            2022  \n",
+              "\n",
+              "[15596 rows x 8 columns]"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -216,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -228,23 +265,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Drop records with no ISSN\n",
+        "IFs_df.drop(IFs_df[IFs_df['ISSN'].isna() & IFs_df['eISSN'].isna()].index, inplace=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "6335"
+              "15232"
             ]
           },
-          "execution_count": 114,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "len(abstracts_df)"
+        "len(IFs_df)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "IFs_df.to_csv('IFs_df.csv', '\\t')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
