--- a/load_abstarcts.ipynb
+++ b/load_abstarcts.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 22,
       "metadata": {
         "scrolled": true
       },
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -120,7 +120,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -131,18 +131,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
         "abstracts_df = abstracts_df.rename(columns={'International Standard Serial Number (ISSN)':'ISSN',\n",
         "                                            'Electronic International Standard Serial Numbe...':'eISSN',\n",
-        "                                             'ORCID Identifier (Open Researcher and Contribu...':'ORCIDs'})"
+        "                                             'ORCID Identifier (Open Researcher and Contribu...':'ORCIDs',\n",
+        "                                             'Web of Science Core Collection Times Cited Count': 'Times cited'})"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -151,7 +152,7 @@
               "6335"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 28,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -162,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
