--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,16 +2,29 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 149,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'sns'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[149], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sns'"
+          ]
+        }
+      ],
       "source": [
         "#import libraries\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import os\n",
         "import math\n",
-        "import re"
+        "import re\n",
+        "import sns"
       ]
     },
     {
