Paiplot in the report

--- a/report_latex/w266 report.tex
+++ b/report_latex/w266 report.tex
@@ -65,7 +65,7 @@ Short description of how downloaded data was transformed into final dataframe.
 Appendix~\ref{sec:appendix} will contain full EDA
 
 \begin{figure}
-	\includegraphics[width= \columnwidth]{./Images/Ref_hist.png}
+	\includegraphics[width= \columnwidth]{./Images/Pairplot.png}
 	\caption{Distribution of the number of cited references}
 	\label{fig:img1}
 \end{figure}
