--- a/report_latex/custom.bib
+++ b/report_latex/custom.bib
@@ -183,3 +183,16 @@
   number of downloads, and number of citations. To our knowledge, this is the first study that applies machine learning on a comprehensive collection of article characteristics to predict article attention scores,
   downloads, and citations. Using 10 years of research articles, we obtained accurate predictions of high-impact articles and discovered important article characteristics related to article impact. }
 }
+
+@book{KahnemanDaniel2021N:af,
+abstract = {Discusses why people make bad judgments and how to make better ones by reducing the influence of "noise"--variables that can cause bias in decision making--and draws on examples in many fields, including medicine, law, economic forecasting, forensic science, strategy, and personnel selection.},
+publisher = {Little, Brown Spark},
+isbn = {9780316451406},
+year = {2021},
+title = {Noise : a flaw in human judgment / Daniel Kahneman, Olivier Sibony, Cass R. Sunstein.},
+edition = {First edition.},
+language = {eng},
+author = {Kahneman, Daniel},
+keywords = {Decision making; Reasoning (Psychology); Judgment; Cognitive styles; PSYCHOLOGY / Applied Psychology; PSYCHOLOGY / Cognitive Psychology & Cognition; PSYCHOLOGY / Social Psychology; Decision making; Judgement; Deciding; Decision (Psychology); Decision analysis; Decision processes; Making decisions; Management -- Decision making; Management decisions; Styles Cognitive; Self-help publications},
+lccn = {2020951207},
+}
